shim (0~20120728.3df9e294-0ubuntu1) UNRELEASED; urgency=low

  * Initial release.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 29 Aug 2012 15:51:10 -0700